<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Esquina</string>
    <string name="language_prompt">Default language</string>

    <!-- Common -->
    <string name="connection_error">Connection error</string>

    <!-- Login fragment -->
    <string name="create_account_text">Create new account</string>
    <string name="enter_credentials_info">Please enter your credentials:</string>
    <string name="account_name_hint">Account name</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="enter_auth_data">Enter authentication data</string>

    <!-- Create account fragment -->
    <string name="create_account_title">Create account</string>
    <string name="mandatory_fields_info">You must fill all fields with asterisk</string>
    <string name="account_name_hint_mandatory">Account name *</string>
    <string name="password_hint_mandatory">Password *</string>
    <string name="retype_password_hint_mandatory">Retype password *</string>
    <string name="first_name_hint_mandatory">First name *</string>
    <string name="middle_name_hint">Middle name</string>
    <string name="last_name_hint_mandatory">Last name *</string>
    <string name="birth_date_hint">Birth date</string>
    <string name="gender_male_label">Male</string>
    <string name="gender_female_label">Female</string>
    <string name="about_me_hint">About me</string>
    <string name="create_account_button">Create account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_successfully_created">Account successfully created</string>
    <string name="activation_info">Please contact application administrator to activate your account</string>

    <!-- Connection problem view -->
    <string name="retry_button">Retry</string>
    <string name="connection_error_info">Cannot connect to cloud</string>
    <string name="cannot_parse_response_info">Cannot parse response</string>
    <string name="valid_account_name_required">Account name is required</string>
    <string name="valid_passowrd_required">Password is required</string>
    <string name="valid_retype_pasword_required">Retype password</string>
    <string name="valid_first_name_required">First name is required</string>
    <string name="valid_last_name_required">Last name is required</string>
    <string name="valid_birth_date_required">Birth date is required</string>
    <string name="valid_gender_group_required">Gender is required</string>
    <string name="valid_retype_password_mismatch">Passwords aren\'t the same</string>
    <string name="application_error">Application error</string>
    <string name="critical_error">Critical error. Please try again later</string>
    <string name="validation_error">Sent form is invalid. Please correct mistakes</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer Menu -->
    <string name="navigation_drawer_menu_item_search">Search</string>
    <string name="navigation_drawer_menu_item_user">User</string>
    <string name="navigation_drawer_menu_item_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_information_title">Basic information</string>
    <string name="about_me_title">About me</string>
    <string name="first_name_label">Name</string>
    <string name="middle_name_label">Middle name</string>
    <string name="last_name_label">Last name</string>
    <string name="gender_label">Gender</string>
    <string name="birth_date_label">Birth date</string>
    <string name="unauthorized_message">Bad credentials. Full authentication is needed</string>
    <string name="critical_application_error">Critical application error</string>
    <string name="followLabel">Follow</string>
    <string name="unfollowLabel">Unfollow</string>
    <string name="followingListEmptyText">Following list is empty</string>
    <string name="followersListEmptyText">Followers list is empty</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="request_canceled_text">Request cancelled by user</string>
    <string name="searchButtonLabel">Search</string>
    <string name="searchUsersRadioButtonLabel">Users</string>
    <string name="searchLocationsRadioButtonLabel">Locations</string>
    <string name="searchQueryInvalid">Query must contain at least 2 characters</string>
    <string name="searchNoResultFound">No results found</string>
    <string name="description_title">Description</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="owner_label">Owner</string>
    <string name="website_label">Website</string>
    <string name="score_title">Score</string>
    <string name="checkin_count_subtitle">Checkin count</string>
    <string name="address_title">Address</string>
    <string name="country_label">Country</string>
    <string name="city_label">City</string>
    <string name="postal_code_label">Postal code</string>
    <string name="street_label">Street</string>
    <string name="tags_title">Tags</string>
    <string name="userCheckinListEmpty">User\'s history is empty</string>
    <string name="locationCheckinListEmpty">Location\'s history is empty</string>
    <string name="navigation_drawer_menu_item_activity">Activity</string>
    <string name="activityListEmpty">Activity list is empty</string>
    <string name="hasCheckedIn">has checked in:</string>
    <string name="scoreCheckBoxLabel">Score</string>
    <string name="commentCheckBoxLabel">Comment</string>
    <string name="commentEditTextHint">Comment</string>
    <string name="checkInButtonLabel">Check in</string>
    <string name="gpsNotReady">Please wait for GPS signal</string>

    <!-- User details -->

</resources>
