<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.squeezedlemon.esquina.client.android.fragments.login.LoginFragment"
    style="@style/rootContainerNoPadding"
    android:paddingBottom="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/esquina_banner"
        android:cropToPadding="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_account_text"
        android:id="@+id/createAccountTextView"
        android:clickable="true"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="10dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fieldsetContainer"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_credentials_info"
            android:id="@+id/enterCredentialsTextView"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/imageView"
            android:layout_alignLeft="@+id/accountNameEditText"
            android:layout_alignStart="@+id/accountNameEditText"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountNameEditText"
            android:layout_below="@+id/enterCredentialsTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/account_name_hint"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/accountNameEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password_hint" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/loginButton"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignRight="@+id/passwordEditText"
            android:layout_alignEnd="@+id/passwordEditText"
            android:layout_marginTop="29dp" />
    </RelativeLayout>

</RelativeLayout>
