<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.squeezedlemon.esquina.client.android.fragment.portal.SearchFragment"
    style="@style/rootContainer" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/marginContainerTopBottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/fieldsetContainer">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchQueryEditText"
                android:layout_toLeftOf="@+id/searchButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/searchButton"
                android:layout_alignTop="@+id/searchButton" />

            <Button
                style="@style/defaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchButtonLabel"
                android:id="@+id/searchButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchQueryEditText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:id="@+id/searchTypeRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchUsersRadioButtonLabel"
                    android:id="@+id/searchUsersRadioButton"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchLocationsRadioButtonLabel"
                    android:id="@+id/searchLocationsRadioButton"
                    android:checked="false" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/fieldsetContainer"
            android:id="@+id/searchResultRelativeLayout"
            android:visibility="invisible" >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchResultListView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchNoResultFoundTextView"
                style="@style/defaultTextHeading"
                android:text="@string/searchNoResultFound"
                android:gravity="center" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
